# pq_benchmark

./: CMakeLists.txt  CMakePresets.json  README.md  benchmark.cpp
competitors/: merge_heap.hpp  merge_heap_avx2.hpp  quick_heap.hpp  quick_heap_avx2.hpp  quick_heap_avx2_no_equal.hpp
scripts/: plot_results.R
tests/: CMakeLists.txt  heap.cpp
